- 16: Issue #224: Workaround for table grids on Look and Feel changes <*>
- 16: Redesigned localization mechanism [Bob Fisch]
- 16: Locales: refactored some names to be more consistent [Bob Fisch]
- 16: Locales: added special case "external" [Bob Fisch]
- 16: Locales: save & load external loaded to and from the INI file [Bob Fisch]
- 16: Locales: make the INI file backward compatible [Bob Fisch]

Version: 3.24 (2016.03.14)
- 01: Bugfix #50 - added return types to signature for function export in Pascal [lhoreman]
- 02: Bugfix #51 - stand-alone input/output keywords were not converted on export [IrisLuc]
- 03: Bugfix #48 - instant delay propagation to Turtleizer <*>
- 03: Bugfix #49 - failing equality detection among variables (also array elements) <*>
- 04: Enh. #36 - allowing to pause from input and output dialogs <*>
- 04: Enh. #54 - Output instruction with expression list (executor, most generators) <*>
- 04: Bugfix #55 - highlighting of variables with keywords as substring mended <*>
- 04: Bugfix #57 - Risk of endless loops and other flaws on Perl export <*>
- 04: Bugfix #59 - For loop export to Python was defective <*>
- 05: executor: Enh. #9 - Subroutine call now supported via Arranger as pool <*>
- 05: executor: Enh. #9 - Control panel shows call depth and (on error) stacktrace <*>
- 05: executor: Enh. #23 - Jump execution implemented in three categories <*>
- 05: arranger: Enh. #9 - Structorizer can now push diagrams into Arranger <*>
- 05: arranger: Enh. #35 - Arranger now got scrollbars and moves to a just added diagram <*>
- 05: arranger: Enh. #35 - Diagrams may be pinned (against replacement) and dropped <*>
- 05: generator: Enh. #23 - Export to C, C++, C#, Java, and Pascal now supports Jumps <*>
- 05: analyser: New checks for calls, jumps, return mechanisms and concurrency risks <*>
- 05: analyser: Analyser hadn't checked within Forever loops and Parallel sections <*>